--- a/styles/components/_modules/_featured-spotlight.scss
+++ b/styles/components/_modules/_featured-spotlight.scss
@@ -5,7 +5,7 @@
 **/
 
 .featured-spotlight {
-  background: $colorGrayDark;
+  background: $colorRed;
   color: #ffffff;
   overflow: hidden;
   padding-bottom: $lineHeight * 3 - 1;
