--- a/styles/components/_modules/_page-header.scss
+++ b/styles/components/_modules/_page-header.scss
@@ -9,10 +9,10 @@
 
   .breadcrumbs {
     text-align: left;
-    color: $colorBlue;
+    color: $colorRed;
 
     a {
-      color: $colorBlue;
+      color: $colorRed;
     }
   }
 
