--- a/styles/components/_modules/_summary-header.scss
+++ b/styles/components/_modules/_summary-header.scss
@@ -5,7 +5,7 @@
 **/
 
 .summary-header {
-  background-color: $colorBlue;
+  background-color: $colorRed;
   padding-bottom: $lineHeight * 3;
   color: #ffffff;
   margin-bottom: $lineHeight;
