--- a/styles/components/_components/_button.scss
+++ b/styles/components/_components/_button.scss
@@ -26,6 +26,7 @@
     color: #ffffff;
     border: 1px solid #4d4d4d;
     text-decoration: none;
+	  
   }
 }
 
@@ -42,15 +43,15 @@
 
 .button--primary {
   @extend .button;
-  @include style-button(#4285f4, #ffffff);
+  @include style-button(#cb4437, #ffffff);
 }
 
 .button--secondary {
   @extend .button;
-  @include style-button(#ffffff, $colorBlue);
+  @include style-button(#ffffff, $colorRed);
 }
 
 .button--secondary-variation {
   @extend .button;
-  @include style-button(#ffffff, $colorBlue, true);
+  @include style-button(#ffffff, $colorRed, true);
 }
