--- a/styles/components/_components/_link.scss
+++ b/styles/components/_components/_link.scss
@@ -5,7 +5,7 @@
 **/
 
 a {
-  color: $colorBlue;
+  color: $colorRed;
 }
 
 a:hover {
@@ -13,9 +13,9 @@ a:hover {
 }
 
 .cta--primary {
-  @include style-cta($colorBlue, $icon-chevron-right);
+  @include style-cta($colorRed, $icon-chevron-right);
 }
 
 .cta--secondary {
-  @include style-cta($colorBlue);
+  @include style-cta($colorRed);
 }
