--- a/styles/main.scss
+++ b/styles/main.scss
@@ -40,7 +40,7 @@ body.open {
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #4285f4;
+  background-color: #EF5350;
   overflow: hidden;
   z-index: 1;
 }
@@ -153,7 +153,7 @@ ol {
   bottom: 0;
   width: 250px;
   height: 100%;
-  background-color: #3367D6;
+  background-color: #F44336;
   color: #fefefe;
   -webkit-transform: translate(-250px, 0);
           transform: translate(-250px, 0);
@@ -248,7 +248,7 @@ main {
     max-width: 864px;
     padding: 0 16px;
     box-sizing: border-box;
-    background-color: #4285f4;
+    background-color: #EF5350;
   }
 
   .app-bar .logo {
@@ -383,29 +383,42 @@ height: 100px;
   font-size: 30px;
 
 }
+
+
+
 .red
 {
-background-color: #4285f4;
+background-color: #EF5350;
 }
 .green
 {
-background-color: #4285f4;
+background-color: #EF5350;
 }
 .blue
 {
-background-color: #4285f4;
+background-color: #EF5350;
 }
 .yellow
 {
-background-color: #4285f4;
+background-color: #EF5350;
 }
 
 .customsection{
-background-color: #4285f4;
+background-color: #EF5350;
 	height: 300px;
 	margin: 5px;
 
 }
+
+.demo-card-square.mdl-card {
+   width: 100%;
+   height: 100%;
+ }
+ .demo-card-square > .mdl-card__title {
+   color: #fff;
+   background:
+     url('../assets/demos/dog.png') bottom right 15% no-repeat #46B6AC;
+ }
 
 @font-face {
   font-family: 'Roboto Condensed';
